# vectornav_ros2_control

magnecko_vectornav/: CMakeLists.txt  magnecko_vectornav.xml  package.xml
magnecko_vectornav/config/: vectornav_controller.yaml
magnecko_vectornav/description/: vectornav_control.urdf.xacro
magnecko_vectornav/include/magnecko_vectornav/: magnecko_vectornav.hpp  visibility_control.h
magnecko_vectornav/launch/: vectornav.launch.py
magnecko_vectornav/src/: magnecko_vectornav.cpp
